# rust-drawing

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSES.md  README.md  workspace.code-workspace
drawing/: Cargo.toml  README.md  TODO.md
drawing/src/: backend.rs  color.rs  composite_operation_state.rs  font.rs  lib.rs  paint.rs  primitive.rs  primitive_extensions.rs  renderer.rs  resources.rs  scissor.rs  units.rs
drawing/src/backend/: colored_vertex.rs  device.rs  render_target.rs  texture.rs
drawing/src/cache/: font_cache.rs  id_cache.rs  mod.rs
drawing/src/clipping/: clipping.rs  scissor.rs  utils.rs
drawing/src/path/: path.rs
drawing/src/texture_font/: README.md  bitmap_font.rs  font.rs  font_size_renderer.rs  gfx_text.rs  mod.rs  texture_font.rs
drawing/src/transformation/: mod.rs  transformation.rs
drawing/src/utils/: clipping.rs  mod.rs  path.rs
drawing_api/: Cargo.toml  README.md
drawing_api/src/: backend.rs  capabilities.rs  color.rs  composite_operation_state.rs  context.rs  display_list_builder.rs  fragment_shader.rs  lib.rs  paint.rs  resources.rs  surface.rs  texture.rs  units.rs
drawing_api/src/backend/: mod.rs  texture.rs  textured_vertex.rs
drawing_api/src/common/: capabilities.rs  context.rs  drawing_context.rs  fragment_program.rs  mod.rs  surface.rs  texture.rs
drawing_api/src/common/display_list/: clip_operation.rs  display_list.rs  display_list_builder.rs  mod.rs  rounding_radii.rs
drawing_api/src/display_list/: #display_list_builder.rs#  clip_operation.rs  display_list_builder.rs  fonts.rs  mod.rs  paint.rs  rounding_radii.rs
drawing_api/src/display_list/paint/: blend_mode.rs  blur_style.rs  color.rs  color_filter.rs  color_matrix.rs  color_source.rs  draw_style.rs  image_filter.rs  image_filter_fragment.rs  mask_filter.rs  mod.rs  paint.rs  stroke_cap.rs  stroke_join.rs  texture_sampling.rs  tile_mode.rs
drawing_api/src/display_list/path/: mod.rs  path.rs  path_builder.rs
drawing_api/src/display_list/text/: font_style.rs  fonts.rs  glyph_info.rs  line_metrics.rs  mod.rs  paragraph.rs  paragraph_builder.rs  paragraph_style.rs  range.rs  text_alignment.rs  text_decoration.rs  text_direction.rs
drawing_api/src/dyn_api/: #display_list_builder_object.rs#  #paragraph_style_object.rs#  color_source_fragment_object.rs  context_gl_object.rs  context_object.rs  context_vulkan_object.rs  display_list_builder_object.rs  display_list_object.rs  drawing_context_object.rs  fonts_object.rs  fragment_program_object.rs  image_filter_fragment_object.rs  mod.rs  paint_object.rs  paragraph_builder_object.rs  paragraph_object.rs  path_builder_object.rs  path_object.rs  surface_object.rs  texture_object.rs  vulkan_swapchain_object.rs
drawing_api/src/gl/: context_gl.rs  mod.rs
drawing_api/src/texture_font/: bitmap_font.rs  font_size_renderer.rs  mod.rs
drawing_api/src/vulkan/: #mod.rs#  context_vulkan.rs  context_vulkan_info.rs  mod.rs  vulkan_swapchain.rs
drawing_examples/: Cargo.toml  README.md
drawing_examples/examples/: multiwindow-gl.rs  multiwindow-impeller-gl.rs  simple-gl.rs  simple-impeller-gl.rs  simple-impeller.rs
drawing_examples/src/: common.rs  multiwindow-fui-system.rs  multiwindow-gl.rs  multiwindow-winit.rs  multiwindow.rs  simple-fui-system.rs  simple-gl.rs  simple-winit.rs  simple.rs  simple2-gl.rs
drawing_gfx/: Cargo.toml
drawing_gfx/src/: backend.rs  font_gfx_text.rs  font_pathfinder.rs  lib.rs
drawing_gfx/src/data/: colored_vertex.fx  textured_pixel.fx  textured_vertex.fx
drawing_gfx/src/dx11/: backend_dx11.rs
drawing_gfx/src/font_gfx_text/: README.md  font.rs  gfx_text.rs  mod.rs
drawing_gfx/src/opengl/: backend_opengl.rs
drawing_gfx/src/opengl/shader/: colored.glslv
drawing_gl/: Cargo.toml  README.md
drawing_gl/src/: backend.rs  font.rs  gl_backend.rs  gl_context.rs  gl_context_data.rs  gl_fragment_program.rs  gl_fragment_shader.rs  gl_render_target.rs  gl_surface.rs  gl_texture.rs  lib.rs  units.rs
drawing_gl/src/device/: device.rs  gl_render_target.rs  gl_texture.rs  mod.rs
drawing_gl/src/display_list/: color_source_fragment.rs  display_list.rs  display_list_builder.rs  fonts.rs  glyph_info.rs  image_filter_fragment.rs  line_metrics.rs  mod.rs  paint.rs  paragraph.rs  paragraph_builder.rs  path.rs  path_builder.rs  primitive.rs
drawing_gl/src/generic/: mod.rs  resources.rs
drawing_gl/src/generic/clipping/: clipping.rs  mod.rs  scissor.rs
drawing_gl/src/generic/device/: color.rs  device.rs  mod.rs  paint.rs  render_target.rs  textured_y8_vertex.rs
drawing_gl/src/generic/path/: path.rs
drawing_gl/src/generic/renderer/: composite_operation_state.rs  display_list_builder.rs  mod.rs  paint.rs  primitive.rs  primitive_extensions.rs  renderer.rs
drawing_gl/src/generic/texture_font/: bitmap_font.rs  font.rs  font_size_renderer.rs  mod.rs  texture_font.rs
drawing_gl/src/generic/transformation/: transformation.rs
drawing_gl/src/pipelines/: colored_pipeline.rs  mod.rs  text_pipeline.rs  textured_pipeline.rs  textured_y8_pipeline.rs  universal_pipeline.rs
drawing_gl/src/pipelines/shaders/: colored.glslf  colored.glslv  text.glslv  textured.glslf  textured.glslv  (+4 more)
drawing_gl/src/shader/: textured.glslv
drawing_gl/src/shaders/: textured.glslf
drawing_gl/src/utils/: ffi_utils.rs  mod.rs  program.rs  shader.rs
drawing_gl/src/vulkan/: mod.rs  vulkan_swapchain.rs
drawing_impeller/: Cargo.toml  README.md
drawing_impeller/src/: #impeller_fragment_shader.rs#  impeller_context.rs  impeller_fragment_program.rs  impeller_fragment_shader.rs  impeller_surface.rs  impeller_texture.rs  lib.rs
drawing_impeller/src/common/: impeller_fragment_program.rs  impeller_surface.rs  impeller_texture.rs  mod.rs
drawing_impeller/src/display_list/: #paragraph.rs#  color_source_fragment.rs  conversion.rs  display_list_builder.rs  fonts.rs  glyph_info.rs  line_metrics.rs  mod.rs  paint.rs  paragraph.rs  paragraph_builder.rs  path.rs  path_builder.rs
drawing_impeller/src/gl/: #mod.rs#  impeller_context_gl.rs  mod.rs
drawing_impeller/src/vulkan/: impeller_context_vulkan.rs  mod.rs  vulkan_swapchain.rs
(+44 files in other folders)
