[package]
name = "drawing"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]
license = "MIT OR Apache-2.0"
description = "Drawing library"
edition = "2018"

[dependencies]
bitflags = "1.2"
anyhow = "1.0"
thiserror = "1.0"
euclid = "0.21"
freetype-rs = "0.26"
rawpointer = "0.2"
clamped = "1.0"
