[package]
name = "drawing_api"
version = "1000.0.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "API for 2D graphics library"
keywords = ["graphics", "2d", "draw", "canvas", "opengl"]
categories = ["graphics", "rendering::graphics-api", "visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/marek-g/rust-drawing"
documentation = "https://docs.rs/drawing"
readme = "../README.md"
edition = "2024"

[dependencies]
euclid = "0.22"
