[package]
name = "drawing_examples"
version = "0.6.0-pre"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Examples for 2D graphics library"
keywords = ["graphics", "2d", "draw", "canvas", "opengl"]
categories = ["graphics", "rendering::graphics-api", "visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/marek-g/rust-drawing"
readme = "README.md"
edition = "2024"

[dependencies]
drawing_api = { path = "../drawing_api", version = "0.6.0-pre" }
drawing_gl = { path = "../drawing_gl", version = "0.6.0-pre" }
windowing_qt = { path = "../../rust-windowing/windowing_qt/", version = "0.14.0" }
gl = "0.14"
euclid = "0.22"
rust-embed = "8.4"
cpu-time = "1.0"

[[bin]]
name = "simple-gl"
path = "src/simple-gl.rs"

[[bin]]
name = "multiwindow-gl"
path = "src/multiwindow-gl.rs"
