[package]
name = "drawing_examples"
version = "0.6.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Examples for 2D graphics library"
keywords = ["graphics", "2d", "draw", "canvas", "opengl"]
categories = ["graphics", "rendering::graphics-api", "visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/marek-g/rust-drawing"
readme = "README.md"
edition = "2024"

[dependencies]
drawing_api = { path = "../drawing_api", version = "1001" }
euclid = "0.22"
drawing_gl = { path = "../drawing_gl", version = "0.7" }
drawing_impeller = { path = "../drawing_impeller", version = "1000" }
windowing_qt = { path = "../../rust-windowing/windowing_qt/", version = "0.17" }
#impellers = { path = "../../impellers/", version = "0.4", features = ["static_link"] }
impellers = { git = "https://github.com/coderedart/impellers", rev = "2d10dfac53711ed5e1cd8c9c8ec82106714c4b60", version = "0.4", features = ["static_link"] }
gl = "0.14"
rust-embed = "8.4"
cpu-time = "1.0"

[[example]]
name = "simple-gl"

[[example]]
name = "multiwindow-gl"
