[package]
name = "drawing_gfx"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]

[dependencies]
drawing = { path = "../drawing", version = "*" }
winit = "*"
glutin = "*"
gfx = "*"
gfx_core = "*"
pathfinder_font_renderer = { git = "https://github.com/pcwalton/pathfinder", path="font-renderer" }
pathfinder_partitioner = { git = "https://github.com/pcwalton/pathfinder", path="partitioner" }
pathfinder_path_utils = { git = "https://github.com/pcwalton/pathfinder", path="path-utils" }
app_units = "*"

[target.'cfg(windows)'.dependencies]
gfx_device_dx11 = "*"
gfx_window_dxgi = "*"

[target.'cfg(not(windows))'.dependencies]
gfx_device_gl = "*"
gfx_window_glutin = "*"
