[package]
name = "drawing_gfx"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]

[dependencies]
drawing = { path = "../drawing", version = "*" }
winit = "*"
glutin = "*"
gfx = "*"
gfx_core = "*"
freetype-rs = "*"

#[target.'cfg(windows)'.dependencies]
#gfx_device_dx11 = "*"
#gfx_window_dxgi = "*"

#[target.'cfg(not(windows))'.dependencies]
gfx_device_gl = "*"
gfx_window_glutin = "*"
