[package]
name = "drawing_gl"
version = "0.4.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "OpenGL backend for 2D graphics library"
keywords = ["graphics", "2d", "draw", "canvas", "opengl"]
categories = ["graphics", "rendering::graphics-api", "visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/marek-g/rust-drawing"
documentation = "https://docs.rs/drawing_gl"
readme = "README.md"
edition = "2021"

[dependencies]
drawing = { path = "../drawing", version = "0.4" }
anyhow = "1.0"
euclid = "0.22"
gl = "0.14"
