[package]
name = "drawing_gl"
version = "0.6.0-pre"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "OpenGL backend for 2D graphics library"
keywords = ["graphics", "2d", "draw", "canvas", "opengl"]
categories = ["graphics", "rendering::graphics-api", "visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/marek-g/rust-drawing"
documentation = "https://docs.rs/drawing_gl"
readme = "README.md"
edition = "2024"

[dependencies]
drawing_api = { path = "../drawing_api", version = "0.6.0-pre" }
anyhow = "1.0"
thiserror = "2.0"
euclid = "0.22"
gl = "0.14"
rawpointer = "0.2"
clamped = "1.0"
freetype-rs = "0.38"
bitflags = "2.10"
